src/objects/StudentCourseVersion__c.object
<CustomObject>
    <description>The version of a course that the student is set to take (or has taken).</description>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <description>The date when the course was completed</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletedTermCode__c</fullName>
        <description>The term code that the course was completed in.</description>
        <label>Completed Term Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The hard and fast status on whether the course is completed or not.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnrollDate__c</fullName>
        <description>The date when the course was enrolled.</description>
        <label>Enroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollTermCode__c</fullName>
        <description>The term code that the course was enrolled in.</description>
        <label>Enroll Term Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCurrent__c</fullName>
        <description>If the student is taking this course currently</description>
        <formula>IF(Student__r.CurrentTerm__c == EnrollTermCode__c ||Student__r.CurrentTerm__c == CompletedTermCode__c || Student__r.CurrentTerm__c==StudentCourseRegistration__r.Termcode__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the student is taking this course currently</inlineHelpText>
        <label>IsCurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <externalId>true</externalId>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>The sequence that the standard path dictates this course should be taken.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDate__c</fullName>
        <description>The status date for this student course version. Usually is the date the course was passed or failed.</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InProgress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentCompletionCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student completion course that has this courses completion info.</description>
        <label>Student Completion Course</label>
        <referenceTo>StudentCompletionCourse__c</referenceTo>
        <relationshipLabel>Student Course Versions</relationshipLabel>
        <relationshipName>StudentCourseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentCourseRegistration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Course Registration</label>
        <referenceTo>StudentCourseRegistration__c</referenceTo>
        <relationshipLabel>Student Course Versions</relationshipLabel>
        <relationshipName>StudentCourseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Course Version</relationshipLabel>
        <relationshipName>StudentCourseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueStudentCourseVersion__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique value for StudentCourseVersion__c per student</description>
        <label>UniqueStudentCourseVersion</label>
        <length>35</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WGUCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The version of the Course that this student is taking.</description>
        <label>WGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>Student Course Versions</relationshipLabel>
        <relationshipName>StudentCourseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Course Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WGUCourseVersion__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Studentid+&apos;-&apos;+Wgucourseid</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Course Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>